build: trim verbose KDoc and inline rationale in convention plugins
Drop history/migration narrative from comments; keep only the
load-bearing "why" for each block:

- IosSimulatorTestSerializer: was 7 lines describing original misdiagnosis
  vs. eventual fix. Now one line stating the current reason (macOS
  simulator sessions are flaky concurrently).
- KMP-library plugin top KDoc: condensed bullet list into two sentences.
- Removed the multi-line "DSL accessor not available from precompiled
  plugin" paragraph; kept the actually load-bearing gate explanation.
- Trimmed androidResources, enableCoverage, and feature-plugin
  debugImplementation/device-test comments to ~2 lines each.

No behavior change; -54 net lines.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>