@@ -12,31 +12,17 @@ import org.gradle.kotlin.dsl.withType
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
 import org.jetbrains.kotlin.gradle.targets.native.tasks.KotlinNativeTest
 
-/**
- * Marker [BuildService] used to serialize Kotlin/Native iOS-simulator test tasks across modules. Originally introduced as a workaround for what looked like
- * a parallel test-result XML race; later diagnosis showed the actual failure was Gradle 9's `GenericHtmlTestReportGenerator` mis-deserializing the binary
- * event stream written by KGP's `TCServiceMessagesClient` (an `ArrayIndexOutOfBoundsException` reading `TestOutputEvent.Destination` ordinals). That
- * report-generator crash is now mitigated separately by disabling `reports.html.required` on every `KotlinNativeTest` task below. The serializer is kept
- * because forcing sequential iOS-sim test execution is still useful (concurrent simulator sessions are flaky on macOS) — but it is no longer the
- * load-bearing fix for the test-report failure.
- */
+/** Serializes Kotlin/Native iOS-simulator test tasks across modules. Concurrent macOS simulator sessions are flaky, so we cap [maxParallelUsages] at 1. */
 abstract class IosSimulatorTestSerializer : BuildService<BuildServiceParameters.None>
 
 /**
- * Convention plugin for Kotlin Multiplatform library modules with an Android target.
+ * Convention plugin for KMP library modules with an Android target.
  *
- * - Applies `kotlin.multiplatform` and `com.android.kotlin.multiplatform.library` (the AGP 9 KMP library plugin; the AGP-8 `androidTarget()` +
- *   `com.android.library` combo is incompatible with AGP 9 + Kotlin 2.3).
- * - Registers iOS targets (`iosArm64`, `iosSimulatorArm64`). The Android target is added automatically by the KMP-library plugin; it's configured
- *   below via `targets.withType<KotlinMultiplatformAndroidLibraryTarget>`. `iosX64` (Intel Mac simulator) is not supported under CMP 1.11 + Kotlin 2.3;
- *   Apple-Silicon Mac sim is covered by `iosSimulatorArm64`.
- * - `jvmToolchain(21)`, Android `compileSdk=36`, `minSdk=26`.
- * - Namespace is path-derived in the convention plugin (`:feature:home` -> `pm.bam.gamedeals.feature.home`), so per-module
- *   `extensions.configure<LibraryExtension> { namespace = ... }` blocks should be dropped.
- * - Mockk needs `-XX:+EnableDynamicAgentLoading` for inline-mock byte-buddy agent attach on JDK 21+ — applied to every `Test` task.
- * - Test source sets are renamed by the new plugin: `androidUnitTest` -> `androidHostTest`, `androidInstrumentedTest` -> `androidDeviceTest`.
+ * Applies `kotlin.multiplatform` + `com.android.kotlin.multiplatform.library` (AGP 9's KMP library plugin), registers `iosArm64` + `iosSimulatorArm64`, sets
+ * `jvmToolchain(21)`, `compileSdk=36`, `minSdk=26`, and derives the Android namespace from `project.path`. Does NOT apply Compose or KSP — modules opt into
+ * those by also applying `pm.bam.gamedeals.kmp.library.compose` and/or `pm.bam.gamedeals.kmp.ksp`.
  *
- * Does NOT apply Compose or KSP. Modules opt into those by also applying `pm.bam.gamedeals.kmp.library.compose` and/or `pm.bam.gamedeals.kmp.ksp`.
+ * Test source-set names under the new plugin: `androidUnitTest` -> `androidHostTest`, `androidInstrumentedTest` -> `androidDeviceTest`.
  */
 class KotlinMultiplatformLibraryConventionPlugin : Plugin<Project> {
     override fun apply(target: Project): Unit = with(target) {
@@ -53,13 +39,9 @@ class KotlinMultiplatformLibraryConventionPlugin : Plugin<Project> {
             iosArm64()
             iosSimulatorArm64()
 
-            // The Android target is added automatically by `com.android.kotlin.multiplatform.library`. From a precompiled convention plugin we can't
-            // use the `android { }` / `androidLibrary { }` DSL accessor (those are project-script auto-accessors); instead we reach it via
-            // `targets.withType<KotlinMultiplatformAndroidLibraryTarget>()`. The new KMP-library plugin's `withDeviceTestBuilder { }` opt-in creates a
-            // `connectedAndroidDeviceTest` task even for modules with no device-test source files; that empty test APK then fails on the device with
-            // `ClassNotFoundException: androidx.test.runner.AndroidJUnitRunner` because androidx-runner is only declared in the feature convention's
-            // androidDeviceTest deps. Gate the opt-in on a real `src/androidDeviceTest/` directory so non-test library modules (e.g. :common, :domain,
-            // :logging, :testing) skip the device-test pipeline cleanly.
+            // `withDeviceTestBuilder { }` creates `connectedAndroidDeviceTest` even for modules with no device-test source files, which then fails at
+            // runtime with `ClassNotFoundException: AndroidJUnitRunner`. Gate the opt-in on a real `src/androidDeviceTest/` so non-test modules skip the
+            // device-test pipeline cleanly.
             val hasDeviceTests = project.file("src/androidDeviceTest").exists()
 
             targets.withType(KotlinMultiplatformAndroidLibraryTarget::class.java).configureEach {
@@ -67,10 +49,8 @@ class KotlinMultiplatformLibraryConventionPlugin : Plugin<Project> {
                 compileSdk = 36
                 minSdk = 26
 
-                // AGP 9's KMP-library plugin disables Android resources by default. Compose Multiplatform resources (used in modules applying the
-                // compose convention) require the pipeline to be enabled — without this, the CopyResourcesToAndroidAssetsTask for androidDeviceTest is
-                // generated without an outputDirectory and the connected tests fail to configure. Enabling here unconditionally keeps the convention
-                // plugin uniform; modules that don't use Compose Resources just have an empty pipeline.
+                // Enable the Android resources pipeline (off by default in AGP 9's KMP-library plugin). Compose Multiplatform resources need it; without
+                // it, `CopyResourcesToAndroidAssetsTask` has no outputDirectory and `androidDeviceTest` fails to configure.
                 androidResources {
                     enable = true
                 }
@@ -81,9 +61,8 @@ class KotlinMultiplatformLibraryConventionPlugin : Plugin<Project> {
                         sourceSetTreeName = "test"
                     }.configure {
                         instrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
-                        // JaCoCo offline instrumentation for the device-test variant. Kover 0.9.x doesn't consume the resulting `.ec` files (tracked at
-                        // kotlinx-kover#96), so the root project's `jacocoAndroidTestReport` task aggregates them into a parallel report alongside
-                        // Kover's JVM coverage.
+                        // JaCoCo offline instrumentation for device tests. Kover 0.9.x doesn't consume the resulting `.ec` files (kotlinx-kover#96), so
+                        // the root `jacocoAndroidTestReport` task aggregates them separately.
                         enableCoverage = true
                     }
                 }
